@@ -20,25 +20,15 @@ Known/suspected bugs/Missing Features on current ZMailer sources
   - Add to  dbases.conf  a triplet: user:group:maxperm
     (either with doublecolon separation, or whitespace separation ?)
 
-- router+scheduler+TA status MIB areas in an SHM segment
+FEATURE:
+  router+scheduler+TA status MIB areas in an SHM segment
   (Solaris et.al. which don't allow ARGV overwrite..
    DNS lookups, connecting, protocol exchanges, ...)
   + tool(s) to read that segment
 
-- scheduler + mailq: Complete the V2 protocol authentication,
-  and turn it into mandated default mode.
-
-- scheduler: BUG? (2000/3/29)
-  BUG: Scheduler running with  "maxthr>1"  seem to loose sync about
-  tasks already fed to the processing.
-
 - smtp TA to ETRN type destinations (usually not reachable) work
   poorly ever since non-blocking connection was taken into use.
     (cured at 2.99.52 ??)
-
-libc: "make install" is "crazy"
-proto:	"make install" -- nothing goes in ???
-		--> MAILSHARE/proto/ !!
 
 INSTALL:
 	Badly out of date!
@@ -181,33 +171,49 @@ transports/smtp:
 	(Prepared to do it, however only on SMTP it is fatal -- I think..)
 
 - scheduler:
+    FEATURE:
+	scheduler + mailq: Complete the V2 protocol authentication,
+	and turn it into mandated default mode.
+
+    BUG? (2000/3/29)
+	Scheduler running with  "maxthr>1"  seem to loose sync about
+	tasks already fed to the processing.
+
+    BUG?
 	How does arrival of a new job into active thread work in case
 	the current activity has already reached the end of the thread ?
 	When will the new job be fed to the transport agent ?
 		(solved?)
 
+    BUG?
 	Sometimes will generate spurious successfull-delivery-
 	reports when the command is retried, and the tag selector
 	is unable to start the real processor.
 		(quite old entry -- 1997-1998 ?)
 
+    BUG?
 	When there are NO reports to be given out, produce no report
 	message either -- we do seem still do it :-/    (20000313)
 		Fixed ? (20000314)
 
+    FEATURE:
 	Tool/mechanism for requeueing a message from the transport
 	back to the router -- all message recipients that have not
 	been processed yet.
 
+    FEATURE:
 	Tool/mechanism for the scheduler to command expiration of all
 	recipients in given thread.  (alike 'manual-expiry', except
 	a bit smarter..)
 
+    FEATURE:
 	- Delivery messages plain-text part needs easier human
 	  understandable format on the messages.
 
+    FEATURE:
 	Reports about delivery DELAY.
 
+    BUG?
 	Have two waiting threads (one message each):
 	- start both of them with ETRN
 	- both issue report of "retryat +nn"
@@ -215,9 +221,11 @@ transports/smtp:
 	- system spins (FAST) on those two...
 		(Fixed ?  Haven't seen this for a while)
 
+    FEATURE:
 	- Another:  maxlife  -- maximum lifetime for a transport agent
 	  for limiting the time a smtp-channel stays open for a long-
 	  living connection...
+
 
 - smtpserver
 
