@@ -1,5 +1,11 @@
 2000-09-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
+	* utils/makedb/dblook.c:
+	    The "-dump" mode has been broken for a while.
+	    Turned out that auto-variables for key & data need
+	    (apparently) be zeroed before even the R_FIRST
+	    position pickup succeeds.  D'uh !
+
 	* lib/selfaddrs.c:
 	    Solaris resolver function don't apparently like (at all)
 	    if the host parameter to e.g. gethostbyname() is 0-size
